--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 		<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="르탄이 - 프로필 링크">
-    <meta property="og:description" content="어서와 코딩은 처음이지?">
+    <meta property="og:title" content="PJay x Chen - 프로필 링크">
+    <meta property="og:description" content="Since 2012">
     <meta property="og:image" content="공유할 이미지">
-    <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
-    <title>르탄이 - 프로필 링크</title>
+    <title>PJay x Chen - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
             font-family: "Pretendard",serif;
         }
-       body{background-color:#44398A;}
+       body{background-color:#0ae1e9;}
        .profile{
         width: 100px;
         height: 100px;
@@ -26,15 +25,17 @@
         background-size: cover;
        }
         .main{
-            color: white;
+            color:darkblue;
+        
             font-size: 20px;
             margin-top: 30px;
             margin-bottom: 10px;
         }
-        .sub{color: white;
-            font-size: 14px;
+        .sub{color:white;
+            font-size: 16px;
             margin-top: 0px;
             margin-bottom: 30px;
+            font-weight:bolder;
 
         }
         .wrap{
@@ -52,7 +53,7 @@
             background-color: white;
             border-radius: 8px;
             margin-bottom: 10px;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: bold;
             color:#44398A;
 
@@ -77,11 +78,11 @@
 <body> 
     <div class="wrap">
         <div class="profile"></div>
-        <h1 class="main">르탄이</h1>
-        <p class="sub">코딩.. 좋아하세요?</p>
-        <a target="_blank" href="">스파르타코딩클럽</a>
-        <a target="_blank" href="">우하하</a>
-        
+        <h1 class="main">PJay x Chen</h1>
+        <p class="sub">since 2012</p>
+        <a target="_blank" href="https://www.instagram.com/pjay81_">PJay</a>
+        <a target="_blank" href="https://www.instagram.com/p_chloe">Chen</a>
+
     </div>
 </body>
 </html> 
