--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="PJay x Chen - 프로필 링크">
     <meta property="og:description" content="Since 2012">
     <meta property="og:image" content="공유할 이미지">
-    <title>PJay x Chen - 프로필 링크</title>
+    <title> PJay x Chen </title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
